# Validator

./: .env  .env_esempio  .gitignore  main4.py  validate_xml_s3.py
opi-validator/: .env.template  CHANGELOG.md  README.md  build.sh  pyproject.toml  var.env
opi-validator/resources/: Tesoreria_Disposizioni.xsd
opi-validator/src/opi_validator/: main.py
validator_repo/: projects.yaml  pyproject.toml
validator_repo/src/opi_validator/: main.py
