[tool.poetry]
name = "opi-validator"
version = "1.0.0"
description = "Validatore XML OPI"
authors = ["Mirco Mazzolena <mirco.mazzolena2@dxc.com>"]
readme = "README.md"
packages = [{ include = "opi_validator", from = "src" }]
include = ["src/opi_validator/resources/*.xsd"]

[tool.poetry.dependencies]
python = ">=3.9"
minio = "*"
lxml = "*"

[tool.poetry.scripts]
opi-validator = "opi_validator.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"